Fixed overflow on continent change

--- a/Outgoing/outgoing_style.css
+++ b/Outgoing/outgoing_style.css
@@ -321,24 +321,6 @@ How to Apply
   padding-left: 1vw;
 }
 
-.LC-card {
-  display: none;
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 98%;
-
-  border-radius: 4px;
-  margin-left: 1vw;
-  background-color: white;
-  box-sizing: border-box;
-  z-index: 900;
-
-  padding: 3vh 3vw;
-  color: black;
-}
-
 .country {
   position: relative;
 
@@ -405,11 +387,38 @@ How to Apply
 }
 
 /* LC Card  */
+.LC-card {
+  display: none;
+  position: relative;
+  top: 0;
+  left: 5%;
+
+  height: 100%;
+  width: 90%;
+
+  border-radius: 4px;
+  background-color: white;
+  box-sizing: border-box;
+  z-index: 900;
+  padding: 3vh 3vw;
+  color: black;
+}
+
+.list-item {
+  border-radius: 4px;
+}
+.list-item:hover {
+  background-color: rgb(218, 218, 218);
+  transition: 0.1s;
+}
 .card-close-button {
   position: absolute;
   top: 5%;
   right: 5%;
   border-radius: 5%;
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* 
